[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/HUD/MenuHUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SFX/UI/Confirm/Confirm 40.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 480, 545 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 545 ), Vector2( 480, 761 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="MenuHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
pitch_scale = 1.06

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/appear = SubResource( 2 )

[node name="Node" type="Node2D" parent="."]
position = Vector2( 480, 545 )

[node name="ContinueButton" type="Button" parent="Node"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -308.0
margin_right = 160.0
margin_bottom = -220.0
rect_pivot_offset = Vector2( 64, -73 )
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../QuitButton")
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true

[node name="StartButton" type="Button" parent="Node"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -212.0
margin_right = 160.0
margin_bottom = -128.0
rect_pivot_offset = Vector2( 64, -73 )
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ContinueButton")
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true

[node name="QuitButton" type="Button" parent="Node"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -116.0
margin_right = 160.0
margin_bottom = -32.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../StartButton")
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
